--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,12 +1,12 @@
 <main class="container">
 
-<!--  <div class="mt-3">-->
-<!--    <mat-card>-->
-<!--      <mat-card-content>-->
-<!--        <app-task-list></app-task-list>-->
-<!--      </mat-card-content>-->
-<!--    </mat-card>-->
-<!--  </div>-->
+  <div class="mt-3">
+    <mat-card>
+      <mat-card-content>
+        <app-task-list></app-task-list>
+      </mat-card-content>
+    </mat-card>
+  </div>
 
 </main>
 
