Implement createTask, editTask, updateTask, deleteTask

--- a/client/src/app/task-list/task-list.component.scss
+++ b/client/src/app/task-list/task-list.component.scss
@@ -24,3 +24,9 @@ table {
   left: 0;
   background-color: rgba(0,0,0,.5);
 }
+.mat-column-complete {
+  width: 50px;
+}
+.mat-column-action {
+  width: 130px;
+}
