--- a/client/src/app/task-list/task-list.component.html
+++ b/client/src/app/task-list/task-list.component.html
@@ -1,22 +1,45 @@
 <ng-container *ngIf="dataSource.length > 0; else noDataTemplate">
+
+  <div class="demo-button-container">
+    <button mat-raised-button (click)="createTask()" class="demo-button">
+      Create new task
+    </button>
+  </div>
+
   <table mat-table [dataSource]="dataSource">
 
-    <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef> Action </th>
+    <ng-container matColumnDef="complete">
+      <th mat-header-cell *matHeaderCellDef>Done</th>
       <td mat-cell *matCellDef="let element">
         <div class="button-row">
           <mat-checkbox [(ngModel)]="element.completed"
                         [color]="'primary'"
                         (ngModelChange)="updateTask(element)">
           </mat-checkbox>
-          <button mat-raised-button
+        </div>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef>Action</th>
+      <td mat-cell *matCellDef="let element">
+        <div class="button-row">
+          <button mat-mini-fab
                   color="primary"
-                  (click)="editTask(element)"
-          >Edit</button>
-          <button mat-raised-button
+                  [matTooltip]="'Edit'"
+                  (click)="editTask(element)">
+            <mat-icon aria-hidden="false"
+                     aria-label="Example home icon"
+                     fontIcon="edit">
+            </mat-icon></button>
+          <button mat-mini-fab
                   color="warn"
-                  (click)="deleteTask(element)"
-          >Delete</button>
+                  [matTooltip]="'Delete'"
+                  (click)="deleteTask(element)">
+            <mat-icon aria-hidden="false"
+                      aria-label="Example home icon"
+                      fontIcon="delete">
+            </mat-icon>
+          </button>
         </div>
       </td>
     </ng-container>
@@ -28,12 +51,12 @@
 
     <ng-container matColumnDef="title">
       <th mat-header-cell *matHeaderCellDef> Title </th>
-      <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+      <td mat-cell *matCellDef="let element"><span [class.text-decoration-line-through]="element.completed"> {{element.title}} </span></td>
     </ng-container>
 
     <ng-container matColumnDef="description">
       <th mat-header-cell *matHeaderCellDef> Description </th>
-      <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+      <td mat-cell *matCellDef="let element"><span [class.text-decoration-line-through]="element.completed"> {{element.description}} </span></td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
