Change Search placeholder and label

--- a/client/src/app/task-list/task-list.component.html
+++ b/client/src/app/task-list/task-list.component.html
@@ -3,8 +3,8 @@
   <div class="header-container">
     <div class="header-input-block">
       <mat-form-field appearance="outline">
-        <mat-label>Outline form field</mat-label>
-        <input matInput placeholder="Placeholder" (input)="search($event)">
+        <mat-label>Search</mat-label>
+        <input matInput placeholder="Search" (input)="search($event)">
         <mat-icon matSuffix>search</mat-icon>
       </mat-form-field>
     </div>
