--- a/client/src/app/task-list/task-list.component.html
+++ b/client/src/app/task-list/task-list.component.html
@@ -76,6 +76,13 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                 [pageSize]="5"
+                 showFirstLastButtons
+                 aria-label="Select page of tasks">
+  </mat-paginator>
+
 </ng-container>
 <ng-template #noDataTemplate>
   <div class="d-flex justify-content-center align-items-center w-100 text-center">
