--- a/client/src/app/task-list/task-list.component.html
+++ b/client/src/app/task-list/task-list.component.html
@@ -15,7 +15,8 @@
     </div>
   </div>
 
-  <table mat-table [dataSource]="dataSourceFiltered" matSort (matSortChange)="announceSortChange($event)">
+  <table mat-table [dataSource]="dataSourceFiltered" matSort (matSortChange)="announceSortChange($event)"
+         cdkDropList (cdkDropListDropped)="drop($event)">
 
     <ng-container matColumnDef="complete">
       <th mat-header-cell *matHeaderCellDef>Done</th>
@@ -74,7 +75,7 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" cdkDrag></tr>
   </table>
 
   <mat-paginator [pageSizeOptions]="[5, 10, 20]"
