--- a/client/src/app/task-list/task-list.component.html
+++ b/client/src/app/task-list/task-list.component.html
@@ -29,6 +29,12 @@
         </div>
       </td>
     </ng-container>
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+      <td mat-cell *matCellDef="let element">
+        <span appStatusColor [statusValue]="element.status">{{element.status}}</span>
+      </td>
+    </ng-container>
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Action</th>
       <td mat-cell *matCellDef="let element">
