--- a/client/src/app/task-list/task-manage-dialog/task-manage-dialog.component.html
+++ b/client/src/app/task-list/task-manage-dialog/task-manage-dialog.component.html
@@ -15,6 +15,15 @@
       </mat-form-field>
 
       <mat-form-field>
+        <mat-label>Favorite food</mat-label>
+        <mat-select [(ngModel)]="taskFormData.status" name="status" #status="ngModel">
+          <mat-option *ngFor="let status of statuses" [value]="status.value">
+            {{status.viewValue}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field>
         <mat-label>Description</mat-label>
         <textarea matInput name="description"
                   #description="ngModel"
