--- a/client/src/app/task-list/task-list.component.html
+++ b/client/src/app/task-list/task-list.component.html
@@ -12,19 +12,22 @@
       <button mat-raised-button color="primary" (click)="createTask()" class="header-button">
         Create
       </button>
+      <button *ngIf="isSelected" mat-raised-button color="warn" (click)="deleteTasks()" class="header-button">
+        Delete selected
+      </button>
     </div>
   </div>
 
   <table mat-table [dataSource]="dataSourceFiltered" matSort (matSortChange)="announceSortChange($event)"
          cdkDropList (cdkDropListDropped)="drop($event)">
 
-    <ng-container matColumnDef="complete">
-      <th mat-header-cell *matHeaderCellDef>Done</th>
+    <ng-container matColumnDef="select">
+      <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
         <div class="button-row">
-          <mat-checkbox [(ngModel)]="element.completed"
+          <mat-checkbox [(ngModel)]="element.selected"
                         [color]="'primary'"
-                        (ngModelChange)="updateTask(element)">
+                        (ngModelChange)="addToSelectedList(element)">
           </mat-checkbox>
         </div>
       </td>
@@ -67,17 +70,17 @@
 
     <ng-container matColumnDef="title">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
-      <td mat-cell *matCellDef="let element"><span [class.text-decoration-line-through]="element.completed"> {{element.title}} </span></td>
+      <td mat-cell *matCellDef="let element"><span [class.text-decoration-line-through]="element.selected"> {{element.title}} </span></td>
     </ng-container>
 
     <ng-container matColumnDef="description">
       <th mat-header-cell *matHeaderCellDef>Description</th>
-      <td mat-cell *matCellDef="let element"><span [class.text-decoration-line-through]="element.completed"> {{element.description}} </span></td>
+      <td mat-cell *matCellDef="let element"><span [class.text-decoration-line-through]="element.selected"> {{element.description}} </span></td>
     </ng-container>
 
     <ng-container matColumnDef="dateCreate">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Create Date</th>
-      <td mat-cell *matCellDef="let element"><span [class.text-decoration-line-through]="element.completed"> {{element.dateCreate | date: 'short' }} </span></td>
+      <td mat-cell *matCellDef="let element"><span [class.text-decoration-line-through]="element.selected"> {{element.dateCreate | date: 'short' }} </span></td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
