--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,13 +1,32 @@
-<main class="container">
+<mat-drawer-container [hasBackdrop]="isMobile">
+  <mat-drawer #drawer mode="side" [opened]="!isMobile" >
 
-  <div class="mt-3">
-    <mat-card>
-      <mat-card-content>
-        <app-task-list></app-task-list>
-      </mat-card-content>
-    </mat-card>
-  </div>
+    <div class="layout-menu-container">
+      <div class="layout-menu-logo">
+        <span>LOGO</span>
+      </div>
+      <nav class="layout-menu-wrapper">
+        <app-menu [menuItems]="menus" [options]="options"></app-menu>
+      </nav>
+    </div>
 
-</main>
+  </mat-drawer>
 
-<router-outlet></router-outlet>
+  <mat-drawer-content>
+    <div class="layout-main-wrapper">
+      <app-toolbar (topbarMenuClick)="drawer.toggle()"></app-toolbar>
+
+      <main class="container">
+
+        <router-outlet></router-outlet>
+
+      </main>
+
+      <div class="footer">
+        <app-footer></app-footer>
+      </div>
+
+    </div>
+
+  </mat-drawer-content>
+</mat-drawer-container>
