--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -1,1 +1,93 @@
-<p>register works!</p>
+<div class="col-12 col-md-8 col-lg-6 mx-auto mt-3">
+  <mat-card>
+    <mat-card-content>
+
+      <h1>Register</h1>
+
+      <form [formGroup]="regForm" (ngSubmit)="register()">
+
+        <div class="row">
+          <div class="col-12 col-md-6">
+            <mat-form-field appearance="fill">
+              <mat-label>First name</mat-label>
+              <input matInput formControlName="firstName">
+            </mat-form-field>
+          </div>
+          <div class="col-12 col-md-6">
+            <mat-form-field appearance="fill">
+              <mat-label>Last name</mat-label>
+              <input matInput formControlName="lastName">
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div class="row">
+          <mat-form-field appearance="fill">
+            <mat-label>Email address:</mat-label>
+            <input matInput placeholder="pat@example.com" formControlName="email">
+            <mat-error *ngIf="regForm.controls['email'].hasError('email') && !regForm.controls['email'].hasError('required')">
+              Please enter a valid email address
+            </mat-error>
+            <mat-error *ngIf="regForm.controls['email'].hasError('required')">
+              Email is <strong>required</strong>
+            </mat-error>
+          </mat-form-field>
+        </div>
+
+        <div class="row">
+          <mat-form-field appearance="fill">
+            <mat-label>Password</mat-label>
+            <input matInput type="password" formControlName="password">
+            <mat-error *ngIf="regForm.get('email')?.invalid">{{ "getErrorMessage()" }}</mat-error>
+          </mat-form-field>
+        </div>
+
+        <div class="row">
+          <mat-form-field appearance="fill">
+            <mat-label>Repeat password:</mat-label>
+            <input matInput type="password" formControlName="passwordConfirm">
+            <mat-error *ngIf="regForm.get('email')?.invalid">{{ "getErrorMessage()" }}</mat-error>
+          </mat-form-field>
+        </div>
+
+        <div class="row">
+          <mat-checkbox color="primary" formControlName="agree">
+            Agree to <a href="#" target="_blank">Terms & Conditions</a>
+          </mat-checkbox>
+        </div>
+
+        <div class="row mt-3">
+          <div>
+            <button mat-raised-button color="primary"
+                    type="submit"
+                    [disabled]="regForm.invalid || isSubmit"
+                    class="w-100"
+            >Register</button>
+          </div>
+        </div>
+
+      </form>
+
+      <section class="mt-4">
+        <div class="links">
+          <p>or enter with: </p>
+          <div class="social">
+            <a routerLink="/">
+              <mat-icon>face</mat-icon>
+            </a>
+            <a routerLink="/">
+              <mat-icon>face</mat-icon>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <section class="mt-4">
+        <div class="another-links">
+          <p>Already have an account? <a routerLink="/auth/login">Log in</a></p>
+        </div>
+      </section>
+
+    </mat-card-content>
+  </mat-card>
+</div>
